--- a/index.html
+++ b/index.html
@@ -131,20 +131,23 @@
         <hr class="one">
         <aside class="proyects">
             <h2 class="class__title">Proyects</h2>
-            <div class="women"></div>
+            
                 <div class="container__proyects">
-                    <img src="images/mobile.png">
-                    <div class="container__flex">
-                        <h3 class="container__title">Landing page responsive</h3>
-                        <span class="container__text">
-                            HTML and CSS layout.
-                        </span>
-                        <span class="container__text">
-                            Adaptada a dispositivos moviles.
-                        </span>
-                        <span class="container__text">
-                            Posicionamiento SEO
-                        </span>
+                    <div class="women"></div>
+                    <img src="images/mobile.png" class="img__mobile">    
+                    </div>
+                    <div class="container__blur">
+                    <h3 class="container__landing">Landing page responsive</h3>
+                    <div class="container__description">
+                    <span class="text">
+                        HTML and CSS layout.
+                    </span>
+                    <span class="text">
+                        Adaptada a dispositivos moviles.
+                    </span>
+                    <span class="text">
+                        Posicionamiento SEO
+                    </span>
                     </div>
                     <div class="container__icons">
                         <img src="images/circle__disabled.png">
@@ -152,9 +155,9 @@
                         <img src="images/circle__disabled.png">
                         <img src="images/circle__disabled.png">
                     </div>
-                    <button><img src="images/left_row.png"></button>
-                    <button><img src="images/right_row.png"></button>
-                </div>   
+                    <button class="left__btn"><img src="images/left_row.png" class="row__left"></button>
+                    <button class="right__btn"><img src="images/right_row.png" class="row__right"></button>
+                    </div>  
         </aside>
         <section class="personalized">
             <h3 class="title__secundary">
@@ -170,12 +173,12 @@
         </section>
     </main>
     <footer>
-        <h3>Contact US</h3>
+        <h3 class="contact__us">Contact US</h3>
         <div class="container__reds">
             <a href="#"><img src="icons/instagram.svg" alt="instagram"></a>
-            <a href="#"><img src="icons/twitter.svg" alt="twitter"></a>
-            <a href="#"><img src="icons/whatsapp.svg" alt="whatsapp"></a>
+            <a href="#"><img src="icons/twitter.svg" alt="twitter"></a>       
         </div>
+        <a href="#" class="whatsapp"><img src="icons/whatsapp.svg" alt="whatsapp"></a>
     </footer>
 
 
